--- a/estig/package.json
+++ b/estig/package.json
@@ -2,6 +2,7 @@
   "name": "hello-next",
   "version": "1.0.0",
   "description": "",
+  "homepage": "www.aeestig.pt",
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
